--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "yargs": "^4.2.0"
   },
   "dependencies": {
-    "@ngrx/store": "^1.3.3",
+    "@ngrx/store": "1.3.3",
     "angular2": "2.0.0-beta.13",
     "angular2-jwt": "^0.1.8",
     "data-adapter": "^0.2.3",
